--- a/psgdrivesyncwebclient/index.html
+++ b/psgdrivesyncwebclient/index.html
@@ -1,9 +1,23 @@
 <html>
 
-<head></head>
+<head>
+    <script type="text/javascript">
+        async function authorize() {
+            const xhttp = new XMLHttpRequest();
+            let url = "https://accounts.google.com/o/oauth2/v2/auth?scope=https://www.googleapis.com/auth/drive.install https://www.googleapis.com/auth/drive.file&response_type=code&state=&redirect_uri=parmeetsinghghai.co.in&client_id=71721436800-2fb49ruogq43oaukjfn7vlpukopiahnm.apps.googleusercontent.com";
+            xhttp.open("GET", url);
+            let result = await xhttp.send();
+
+        }
+    </script>
+
+</head>
 
 <body>
     <p>PSGDriveSync Web Client</p>
+    <span>
+        <button onclick=""></button>
+    </span>
 </body>
 
 </html>
