--- a/psgdrivesyncwebclient/index.html
+++ b/psgdrivesyncwebclient/index.html
@@ -16,7 +16,7 @@
 <body>
     <p>PSGDriveSync Web Client</p>
     <span>
-        <button onclick=""></button>
+        <button onclick="">Authorize</button>
     </span>
 </body>
 
