--- a/psgdrivesyncwebclient/index.html
+++ b/psgdrivesyncwebclient/index.html
@@ -17,6 +17,9 @@
     <p>PSGDriveSync Web Client</p>
     <span>
         <button onclick="">Authorize</button>
+        <a href="https://accounts.google.com/o/oauth2/v2/auth?scope=https://www.googleapis.com/auth/drive.install https://www.googleapis.com/auth/drive.file&response_type=code&state=&redirect_uri=parmeetsinghghai.co.in&client_id=71721436800-2fb49ruogq43oaukjfn7vlpukopiahnm.apps.googleusercontent.com">Direct Link</a>
+
+
     </span>
 </body>
 
