Updated on 26th May 2023
1) Changed PSGDriveSync Description from "Google Drive™ Sync Client" to "A Powerful Sync Client For Google Drive™" on the home page's project section and the application's home page

2) Removed borders from the project features and added a blue glow effect.

--- a/psgdrivesync/index.html
+++ b/psgdrivesync/index.html
@@ -91,17 +91,11 @@
 									  <img width="200px" src="./assets/img/applogo_wheel.png" class="spinning_rotate" />
 									  <img width="200px" src="./assets/img/applogo_body.png" class="spinning_steady"/>
 								  </div>
-
-
-								  <!--
-								  <div id="spinninglogo_in"><img width="200px" src="./assets/img/applogo_wheel.png" class="rotate" /></div>
-								  <div id="spinninglogo_out"><img width="200px" src="./assets/img/applogo_body.png" /></div>
-								  -->
 							  </td>
 
 							  <td width="80%">
 								  <h1><b>PSGDriveSync</b></h1>
-								  <h3>Google Drive™ Sync Client</h3>
+								  <h3>A Powerful Sync Client For Google Drive™</h3>
 							  </td>
 						  </tr>
 					  </table>
