Updated on 2nd June 2023
Updated the Meta Tag for Home Page and PSGDriveSync Page.  Changed title in the home page to: <title>Parmeet Singh Ghai's Portfolio</title>Content added are as follows:

MainPage:
<meta name="description" content="Developer: Parmeet Singh Ghai, Category: Software Development Portfolio, Softwares Offered: 1.PSGDriveSync Google Sync Client 2.PSGPasswordManager Password Manager Application 3.DoomBuggies 3D Game">
    <meta name="keywords" content="Google, Drive, Sync, Encryption, Automated, Game, Password">

PSGDriveSync Page
<meta name="description" content="Software: PSGDriveSync, Developer:Parmeet Singh Ghai, Category:Sync Client For Google Drive, Features: 1.AES-256 Encryption 2.Conditional Syncing 3.Multiple Google Drives 4.Safe and Secure 5.30 Days Free Trial">
<meta name="keywords" content="Google, Drive, Sync, Encryption, Automated, Syncing, Automated, Multithreaded, SyncClient">

--- a/psgdrivesync/index.html
+++ b/psgdrivesync/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Alvarez.is - BlackTie.co">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Software: PSGDriveSync, Developer:Parmeet Singh Ghai, Category:Sync Client For Google Drive, Features: 1.AES-256 Encryption 2.Conditional Syncing 3.Multiple Google Drives 4.Safe and Secure 5.30 Days Free Trial">
+	<meta name="keywords" content="Google, Drive, Sync, Encryption, Automated, Syncing, Automated, Multithreaded, SyncClient">
 
-    <title>PSGDriveSync Home Page</title>
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/main.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+	<title>PSGDriveSync Home Page</title>
+	<link href="assets/css/bootstrap.css" rel="stylesheet">
+	<link href="assets/css/main.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
-    <style>
-        .spinning_parent {
-            position: relative;
-            left: 0px;
-            top: 0px;
-        }
-        .spinning_steady {
-            position: absolute;
-            left: 15px;
-            top: 40px;
-        }
-        .spinning_rotate {
-            animation: rotation 12s infinite linear;
-        }
-        @keyframes rotation {
-            from {
-                transform: rotate(0deg);
-            }
+	<style>
+		.spinning_parent {
+			position: relative;
+			left: 0px;
+			top: 0px;
+		}
 
-            to {
-                transform: rotate(359deg);
-            }
-        }
+		.spinning_steady {
+			position: absolute;
+			left: 15px;
+			top: 40px;
+		}
+
+		.spinning_rotate {
+			animation: rotation 12s infinite linear;
+		}
+
+		@keyframes rotation {
+			from {
+				transform: rotate(0deg);
+			}
+
+			to {
+				transform: rotate(359deg);
+			}
+		}
 	</style>
 
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/smoothscroll.js"></script>
-  </head>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/smoothscroll.js"></script>
+</head>
 
   <body data-spy="scroll" data-offset="0" data-target="#navigation">
 	  <div id="navigation" class="navbar navbar-default navbar-fixed-top">
